# scanr

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  NAMESPACE  README.md
.github/workflows/: R-CMD-check.yaml
.quarto/vdoc/: .vdoc.562f4f8f-3f30-44bf-8422-6f557b386f13.r
R/: extendr-wrappers.R  scanr.R
local-lib/scanr/: DESCRIPTION  INDEX  LICENSE  README.md
local-lib/scanr/Meta/: Rd.rds  links.rds  nsInfo.rds  package.rds
local-lib/scanr/R/: scanr.rdb  scanr.rdx
local-lib/scanr/help/: AnIndex  paths.rds  scanr.rdb  scanr.rdx
local-lib/scanr/html/: 00Index.html
man/: plot_change_points.Rd  plot_swal_curve.Rd  plot_time_series.Rd  plot_vote_scree.Rd  plot_window_votes.Rd  precision_recall_cpd.Rd  scan_cpd.Rd  scan_single_window.Rd  vis_thresholds.Rd  vis_time_series.Rd  vis_vote_scree.Rd  wasserstein_statistic.Rd
scanr.Rcheck/: 00install.out
scanr.Rcheck/00_pkg_src/scanr/: DESCRIPTION  README.md
scanr.Rcheck/scanr/: DESCRIPTION  INDEX
scanr.Rcheck/scanr/Meta/: Rd.rds  hsearch.rds  links.rds  nsInfo.rds  package.rds  vignette.rds
scanr.Rcheck/scanr/R/: scanr.rdb  scanr.rdx
scanr.Rcheck/scanr/doc/: index.html  scanr-introduction.html
scanr.Rcheck/scanr/help/: AnIndex  (+4 more)
scanr.Rcheck/tests/: smoke.R  smoke.Rout
src/: Makevars  Makevars.win  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: aggregate.rs  detect.rs  lib.rs  r_api.rs  stats.rs  validation.rs  wasserstein.rs
tests/: smoke.R  testthat.R
tests/testthat/: test-metrics.R  test-native-statistics.R  test-validation.R
vignettes/: scanr-introduction.html  scanr-introduction.qmd
(+31 files in other folders)
