[package]
name = "scanr"
version = "0.1.0"
edition = "2021"

[lib]
name = "scanr"
crate-type = ["staticlib"]

[dependencies]
extendr-api = "0.9"
rand = "0.9"
rand_xoshiro = "0.7"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "fat"                   # cross-crate inlining across extendr + rayon boundary
codegen-units = 1             # single CGU enables full whole-program optimisation
panic = "abort"               # removes unwinding tables; smaller binary, faster runtime
